<resources>
    <string name="app_name">My Application</string>

    <string name="text_splash_1">loading resource</string>
    <string name="text_splash_2">download image</string>
    <string name="text_splash_3">handle error</string>
    <string name="text_splash_4">update version</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="permission">Permission</string>
    <string name="app_name_requires_these_permissions_to_function_properly">My Application requires these permissions to function properly.</string>
    <string name="camera">Camera</string>
    <string name="continue_without_permission">continue without permission</string>
    <string name="grant_permission_camera">grant permission camera</string>
    <string name="continue_n">continue</string>
    <string name="permission_denied">permission denied</string>
    <string name="go_to_settings">Đi đến Cài đặt</string>
    <string name="cancel">cancel</string>
    <string name="permission_camera">Cần quyền Camera</string>
    <string name="permission_camera_message">Ứng dụng cần quyền truy cập Camera để chụp ảnh và quay video. Vui lòng cấp quyền trong cài đặt để tiếp tục sử dụng đầy đủ chức năng của ứng dụng.</string>
    <string name="permission_camera_explanation"> Ứng dụng cần quyền truy cập camera để bạn có thể chụp ảnh và quay video.</string>
    <string name="grant_permission">Cấp quyền</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_how_to_upload_images">Select how to upload images</string>
    <string name="gallery">Gallery</string>
    <string name="error">Error</string>
    <string name="no_face_detected">no face detected</string>
    <string name="please_try_again_with_a_frontal_portrait_photo">please try again with a frontal portrait photo</string>
    <string name="more_than_one_face_detected">more than one face detected</string>
    <string name="please_try_again_with_a_single_faced_frontal_portrait">please try again with a single faced frontal portrait</string>
    <string name="upload_image_error">Upload Image Error</string>
    <string name="oops_something_went_wrong_please_try_again">Oops! Something went wrong. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="choose_another_photo">choose another photo</string>
    <string name="your_style">Chọn 2 ảnh để hoán đổi khuôn mặt </string>
    <string name="generate">Generate</string>
    <string name="you_want_to_close_dialog">You want to close dialog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>