<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.no_internet.NoInternetActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/figtree_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="15dp"
        android:text="@string/no_internet"
        android:textColor="@color/color_00C40D"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_permission_no_internet"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_no_internet" />


    <TextView
        android:id="@+id/tv_no_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/figtree_semi_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/no_internet_connection"
        android:textColor="@color/color_1B1B1B"
        app:layout_constraintTop_toBottomOf="@id/img_permission_no_internet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCheckInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/figtree_regular"
        android:gravity="center"
        android:text="@string/please_check_your_internet_connection_and_try_again"
        android:textColor="@color/color_1B1B1B"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_internet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_round_12_border"
        android:backgroundTint="@color/color_00C40D"
        android:fontFamily="@font/figtree_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="44dp"
        android:paddingVertical="12dp"
        android:text="@string/retry"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckInternet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp" />


</androidx.constraintlayout.widget.ConstraintLayout>
