<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionActivity">

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/figtree_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/permission"
        android:textAlignment="center"
        android:textColor="@color/color_1B1B1B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_next_language"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tvPermission"
        app:layout_constraintStart_toEndOf="@+id/tvPermission"
        app:layout_constraintTop_toTopOf="@id/tvPermission" />

    <ImageView
        android:id="@+id/img_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPermission"/>

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/figtree_medium"
        android:includeFontPadding="false"
        android:text="@string/app_name_requires_these_permissions_to_function_properly"
        android:textAlignment="center"
        android:textColor="@color/color_1B1B1B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_permission" />

    <View
        android:id="@+id/vTurnPermission"
        app:layout_constraintTop_toBottomOf="@+id/tvText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />
    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/figtree_regular"
        android:includeFontPadding="false"
        android:text="@string/camera"
        android:textColor="@color/color_1B1B1B"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@id/vTurnPermission"
        app:layout_constraintTop_toTopOf="@id/vTurnPermission"
        app:layout_constraintBottom_toBottomOf="@id/vTurnPermission" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@id/vTurnPermission"
        app:layout_constraintTop_toTopOf="@id/vTurnPermission"
        app:layout_constraintBottom_toBottomOf="@id/vTurnPermission" />


    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/figtree_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/continue_without_permission"
        android:textColor="@color/color_00C40D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>